Test install ollama & llm

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -29,6 +29,11 @@ jobs:
       run: |
           pip install .[test]
 
+    - name: Install ollama and small LLM
+      run: |
+          pip install ollama
+          ollama pull llama3.2:1b
+
 
     - name: Test all
       run: | 
