--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ __pycache__
 /openworm_ai.egg-info
 /openworm_ai/quiz/samples/GPT4o_5questions.json
 /openworm_ai/quiz/samples/Ollama_mistral_5questions.json
+/openworm_ai/quiz/samples/Ollama_Llama3.2_5questions.json
