--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -31,7 +31,10 @@ jobs:
 
     - name: Install ollama and small LLM
       run: |
-          pip install ollama
+          # https://stackoverflow.com/questions/78486506/ollama-running-with-github-actions
+          curl -fsSL https://ollama.com/install.sh | sh
+ 
+          ollama serve
           ollama pull llama3.2:1b
 
 
