Restructure GraphRAG to allow multiple llm bvased stores

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ install_requires =
    pandas
    modelspec
    llama_index
+   llama-index-llms-ollama
 
 
 python_requires = >=3.8
@@ -64,7 +65,7 @@ dev =
    llamaapi
    langchain_experimental
    langchain_ollama
-
+ 
 
 all =
     openworm_ai[test]
