--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ __pycache__
 /document.txt
 /document.yaml
 venv/
+/openworm_ai/quiz/samples/GPT4o_10questions_celegans.json
+/openworm_ai/quiz/samples/Ollama_phi3_latest_10questions_celegans.json
