--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ __pycache__
 venv/
 /openworm_ai/quiz/samples/GPT4o_10questions_celegans.json
 /openworm_ai/quiz/samples/Ollama_phi3_latest_10questions_celegans.json
+/store
