--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ venv/
 /openworm_ai/quiz/samples/GPT4o_10questions_celegans.json
 /openworm_ai/quiz/samples/Ollama_phi3_latest_10questions_celegans.json
 /store
+/openworm_ai/corpus/wormatlas/ignore
