--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,6 @@ license = LGPLv3
 license_files = LICENSE
 classifiers =
     Intended Audience :: Science/Research
-    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
     Natural Language :: English
     Operating System :: OS Independent
     Topic :: Scientific/Engineering
@@ -46,8 +45,12 @@ include_package_data = True
 
 [options.packages.find]
 where = .
+exclude = 
+    openworm_ai*/corpus/wormatlas/*_files/*
+    *.png 
+    *.jpg 
 include = 
-    openworm_ai*
+    openworm_ai* 
 
 
 [options.package_data]
