--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ venv/
 /openworm_ai/corpus/wormatlas/ignore
 /openworm_ai/quiz/samples/GPT4o_10questions_general.json
 /openworm_ai/quiz/samples/GPT4o_10questions_science.json
+/dist
