--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -16,6 +16,10 @@ jobs:
   deploy:
 
     runs-on: ubuntu-latest
+    
+    permissions:
+      # IMPORTANT: this permission is mandatory for Trusted Publishing
+      id-token: write
 
     steps:
     - uses: actions/checkout@v4
