--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -12,6 +12,7 @@ jobs:
   build:
 
     runs-on: ${{ matrix.runs-on }}
+    environment: Standard
     strategy:
       fail-fast: false
       matrix:
