--- a/setup.cfg
+++ b/setup.cfg
@@ -65,7 +65,7 @@ test =
 
 dev = 
    openworm_ai[test]
-   langchain
+   langchain<1.0.0
    langchain_openai
    llamaapi
    langchain_experimental
