--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ install_requires =
    modelspec
    llama_index
    llama-index-llms-ollama
+   langchain
    matplotlib
 
 
@@ -65,11 +66,7 @@ test =
 
 dev = 
    openworm_ai[test]
-   langchain<1.0.0
-   langchain_openai
    llamaapi
-   langchain_experimental
-   langchain_ollama
    llama-index-embeddings-ollama
  
 
