Add echo command for environment variables in CI
Added echo command to display environment variables before running API commands.

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -51,6 +51,8 @@ jobs:
       env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: | 
+        echo "Running (paid) API comands. Env:"
+        env
         ./regenerateAndTest.sh  # Test the parts requiring API keys...
 
 
