--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -47,7 +47,7 @@ jobs:
 
 
     - name: Test interactions requiring API (requires OPENAI key)
-      if: ${{ matrix.runs-on == 'ubuntu-latest' && matrix.python-version == '3.12' }}
+      if: ${{ matrix.runs-on == 'ubuntu-latest' && matrix.python-version == '3.12' && env.GITHUB_REPOSITORY_OWNER == 'openworm' }}
       env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: | 
