--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ install_requires =
    modelspec
    llama_index
    llama-index-llms-ollama
+   llama-index-embeddings-huggingface
    langchain>=1.0.0
    matplotlib
 
