--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ install_requires =
    llama_index
    llama-index-llms-ollama
    llama-index-embeddings-huggingface
+   llama-index-llms-huggingface-api
    langchain>=1.0.0
    matplotlib
 
